RESOLVED FIXED228259
[iOS] REGRESSION(r277505): `-[WKWebView underPageBackgroundColor]` also changes the scroll bar color
https://bugs.webkit.org/show_bug.cgi?id=228259
Summary [iOS] REGRESSION(r277505): `-[WKWebView underPageBackgroundColor]` also chang...
Devin Rousso
Reported 2021-07-23 17:25:14 PDT
e.g. if an application overrides the `-underPageBackgroundColor` with a dark color on a page that has a light background color, the scroll bar will appear light to "match" the overridden `-underPageBackgroundColor` instead of dark to "match" the page's background color
Attachments
Patch (8.50 KB, patch)
2021-07-23 17:49 PDT, Devin Rousso
ews-feeder: commit-queue-
Patch (8.48 KB, patch)
2021-07-23 17:57 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-07-23 17:38:11 PDT
Devin Rousso
Comment 2 2021-07-23 17:49:50 PDT
Devin Rousso
Comment 3 2021-07-23 17:57:03 PDT
EWS
Comment 4 2021-07-24 01:20:14 PDT
Committed r280283 (239941@main): <https://commits.webkit.org/239941@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434151 [details].
Note You need to log in before you can comment on or make changes to this bug.